CSS/Desktop/main.css
.calendar-container {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  grid-auto-rows: minmax(20px, auto);
  grid-auto-columns: minmax(20px, auto);
  grid-gap: 2px;
  height: 93%;
}

.day,
.next-month-day,
.prev-month-day {
  display: flex;
  background-color: rgba(243, 243, 243, 0.331);

  font-size: 2rem;
  padding: 0.5rem;
  transition: all 0.5s;
  flex-direction: column;
}

.content-container {
  max-width: 100%;
}
/* Icons ----------------------------------------------- */
.day i {
  font-size: 1rem;
  margin: 4px;
  padding: 0.1rem;
}

/* day structrure -------------------------------------- */
.todo-notification-container {
  background-color: orange;
  height: 1.2rem;
  border-radius: 10rem;
  display: block;
  margin-left: 0.5rem;
}

.nr-of-todos {
  font-size: 1rem;
  padding: 0 0.3rem;
  display: block;
}

.day-info-container {
  background: none;
  padding: 0 0.5rem 0 0.2rem;
}

.hover-text {
}

.flag-occasion {
  display: none;
  font-size: 0.7rem;
}

.name-day-container {
  display: none;
  font-size: 0.7rem;
}

.selected-Day {
  background-color: #d9d9d9;
}
/* DAY HOVER -------------------------------------------------------------------------------- */

.day:hover {
  color: white;
  cursor: pointer;
  z-index: 1;
  position: relative;
  flex-direction: column;
}
.day:hover .day-info-container {
  background-color: #133947;
  box-shadow: 0.1rem 0.1rem 2px black;
}

.day:hover .content-container {
  min-width: 130%;
}

.day:hover .todo-list-on-hover {
  color: #133947;
  display: flex;
  padding: 0.5rem 0;
  margin: 0.3rem 0 0 0;
  box-shadow: 0.1rem 0.1rem 2px black;
  background-color: rgb(255 255 255);
}

.day:hover .flag-notification-icon {
  display: none;
}

.day:hover .name-day-container {
  display: flex;
  flex-direction: column;
}

.day:hover .flag-occasion {
  display: flex;
}

.day:hover .todo-icon {
  display: flex;
}

.day:hover .todo-notification-container {
  display: none;
}

.day:hover .flag-day-container {
  display: flex;
  padding: 0.5rem 0;
  color: #133947;
  margin: 0.3rem 0 0 0;
  background: #ffffff;
  box-shadow: 0.1rem 0.1rem 2px black;
}

.day:hover i {
  color: orange;
}
.day:hover .todo-list-hover-container {
  position: absolute;
  width: 100%;
  margin-top: 0.5rem;
}

.day:hover .todo:nth-child(-n + 4) {
  display: block;
}

.day:hover .todo {
  max-width: 80%;
  z-index: 3;
}

.todo,
.more-todos {
  margin-left: 5%;
  color: #133947;
  font-size: 0.7rem;
  font-style: italic;
  max-width: 80%;
  overflow: hidden;
  text-overflow: ellipsis;
}

.todo-list-hover-container {
  display: flex;
  top: 25%;
}

.holiday {
  color: red;
}

.prev-month-day,
.next-month-day {
  color: #3b829c47;
  max-height: 100%;
}

.weekday-container {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  font-size: 2rem;
  font-weight: bold;
  height: 7%;
}

main {
  width: 100%;
}

.extra {
  background-color: lightgreen;
}

@media (max-width: 1400px) {
  .day:hover .content-container {
    min-width: 100%;
    left: 0;
  }
  .day:hover .flag-occasion {
    display: flex;
    /* flex-wrap: wrap;
    overflow-wrap: break-word;
    word-wrap: break-word;
    max-width: 80%; */
  }
  .day:hover .flag-day-container {
    display: flex;
  }
}

